--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "author": "Aashish shah",
   "license": "ISC",
   "scripts": {
-    "serve": "node server.js",
+    "server": "nodemon server.js",
     "dev": "nodemon server.js",
     "development": "mix",
     "watch": "npx mix watch"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "connect-mongo": "^3.2.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -19,10 +20,15 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "noty": "^3.2.0-beta-deprecated"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^3.0.1"
+    "laravel-mix": "^6.0.49",
+    "nodemon": "^3.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.64.1",
+    "sass-loader": "^12.1.0"
   }
 }
