--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^7.4.1",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
